# serial.rs

./: .travis.yml  Cargo.toml  README.md  upload-docs.sh
src/: lib.rs  socat.rs  termios.rs  test.rs
