[package]

name = "serial"
version = "0.0.0"
authors = ["Jorge Aparicio <japaric@linux.com>"]

[dev-dependencies.quickcheck]
git = "https://github.com/japaric/quickcheck"

[dev-dependencies.quickcheck_macros]
git = "https://github.com/japaric/quickcheck"

[profile.dev]
debug = false

[profile.test]
debug = false
